--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -7,7 +7,7 @@
   </li>
 </ul>
 <div>
-  <label>Hero name:
+  <label>Hero name::::::::::::::::::::::;
     <input #heroName />
   </label>
   <!-- (click) passes input value to add() and then clears the input -->
